# IMDB-review-sentiment-analysis

./: README.md  embedding.ipynb  main.py  prediction.ipynb  pyproject.toml  simpleRNN.ipynb
