[tool.poetry]
name = "genai-udemy"
version = "0.1.0"
description = ""
authors = ["Yash Shethwala <yshethwala@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow-io-gcs-filesystem = "0.31.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
streamlit = "^1.39.0"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
tensorboard = ">=2.17,<2.18"
tensorflow-cpu = "^2.17.0"
keras = "^3.6.0"
scikeras = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
